AC_INIT
AC_CONFIG_SRCDIR([configure.in])

AM_INIT_AUTOMAKE(pythia, 8.1.42)

AC_PROG_CXX(CC g++)
AC_ENABLE_STATIC(no)
AC_PROG_LIBTOOL

dnl with hepmc
AC_ARG_WITH([hepmc],
            [AS_HELP_STRING([--with-hepmc],build HepMC interface (default=no))],
            [with_hepmc=yes], [])
AM_CONDITIONAL([BUILD_HEPMC], [test x$with_hepmc = xyes])

AC_ARG_ENABLE([lhapdf],
              [AS_HELP_STRING([--disable-lhapdf],disable use of system LHAPDF installation (default=no))],
              [], [disable_lhapdf=no])
AC_CHECK_LIB([LHAPDF], [lhapdf_], [has_lhapdf=yes], [has_lhapdf=no])
AM_CONDITIONAL([HAS_LHAPDF], [test x$has_lhapdf = xyes && test x$disable_lhapdf = xno])

AC_ARG_ENABLE([pythia6],
              [AS_HELP_STRING([--disable-pythia6],disable use of system pythia6 installation (default=no))],
              [], [disable_pythia6=no])
AC_CHECK_LIB([pythia6], [pyinit_], [has_pythia6=yes], [has_pythia6=no])
AM_CONDITIONAL([HAS_PYTHIA6], [test x$has_pythia6 = xyes && test x$disable_pythia6 = xno])

htmldir=${docdir}/htmldoc

AC_CONFIG_FILES([Makefile examples/Makefile])
AC_OUTPUT
